@@ -12,8 +12,11 @@ module Devise
 
       include Devise::Schema
 
-      # Tell how to apply schema methods.
+      # Tell how to apply schema methods. This automatically converts DateTime
+      # to Time, since MongoMapper does not recognize the former.
       def apply_schema(name, type, options={})
+        return unless Devise.apply_schema
+        type = Time if type == DateTime
         key name, type, options
       end
     end
